# security-utilities

./: .gitattributes  .gitignore  BuildAndTest.cmd  BuildAndTestRust.cmd  BuildPackages.cmd  README.md  ReleaseHistory.md  azure-pipelines.yml  version.json
.github/: CODEOWNERS  test-marvin-nodejs.yml
.github/workflows/: codeql-analysis.yml  dotnet-format.yml  dotnet.yml  rust.yml  test-marvin-nodejs.yml
GeneratedRegexPatterns/: HighConfidenceMicrosoftSecurityModels.json  HighConfidenceSecurityModels.json  LowConfidenceSecurityModels.json  MediumConfidenceSecurityModels.json  PreciselyClassifiedSecurityKeys.json  UnclassifiedPotentialSecurityKeys.json
docs/: ReleaseHistory.md  ReleaseHistory_Rust.md
scripts/: BuildAndTest.ps1  BuildPackages.ps1
src/: .editorconfig  Build.props  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Directory.Solution.props  Directory.WarningsAsErrors.props  Microsoft.Security.Utilities.Packages.sln  Microsoft.Security.Utilities.sln
src/Benchmarks/: Benchmarks.csproj  Microsoft.Security.Utilities.Benchmarks.csproj  Program.cs  RE2RegexEngine.cs  RegexEngineDetectionBenchmarks.cs  RegexEngineMaskingBenchmarks.cs  out.txt
src/Marvin/: CustomAlphabetEncoder.cs  IdentifiableSecrets.cs  Marvin.Net5.cs  Marvin.NetFramework.cs  Marvin.NetStandard.cs  Marvin.csproj
src/Tests.Marvin/: MarvinShared.cs  (+5 more)
src/security_utilities_rust/: Cargo.toml  README.md
src/security_utilities_rust/.cargo/: config.toml
src/security_utilities_rust/benches/: cross_company_correlating_id.rs  identifiable_scans.rs  identifiable_secrets.rs  marvin.rs
src/security_utilities_rust/src/: cross_company_correlating_id_tests.rs  end_to_end_tests.rs  identifiable_scans_tests.rs  identifiable_secrets_tests.rs  lib.rs  marvin_tests.rs  microsoft_security_utilities_core.rs
src/security_utilities_rust/src/microsoft_security_utilities_core/: cross_company_correlating_id.rs  identifiable_scans.rs  identifiable_secrets.rs  marvin.rs
src/security_utilities_rust/test_files/: bench_data.utf8
src/security_utilities_rust_ffi/: Cargo.toml
src/security_utilities_rust_ffi/src/: lib.rs
(+338 files in other folders)
