[package]
name = "microsoft_security_utilities_core"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
lazy_static = "1.4.0"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rand = "0.8.4"
regex = "1.7.1"
sha2 = "0.10.8"
substring = "1.4.5"