[package]
name = "microsoft_security_utilities_core"
version = "1.5.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
sha2 = "0.10.8"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "marvin"
harness = false

[[bench]]
name = "identifiable_scans"
harness = false

[[bench]]
name = "cross_company_correlating_id"
harness = false

