[package]
name = "microsoft_security_utilities_core_ffi"
version = "1.5.3"
edition = "2021"

[lib]
name = "microsoft_security_utilities_core"
crate-type = ["dylib"]

[dependencies]
microsoft_security_utilities_core = { path = "../security_utilities_rust" }

# Causes the project to link with the Spectre-mitigated CRT and libs.
msvc_spectre_libs = { version = "0.1", features = ["error"] }
